Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.31***

***	Fix "always @ (* )", bug403, bug404.  [Walter Lavino]


* Verilog::Language 3.312 2011/10/20

***	Fix $past with event_control, bug400. [Jon Nall]

****	Fix 02_help.t error when pager highlights manpages.


* Verilog::Language 3.311 2011/10/18

**	Add SigParser class and endclass callbacks, bug391. [Jon Nall]

***	Fix EditFiles confusing endmodule in nested comments. [Wu Ye]

***	Fix --help output to go to stderr, not stdout.  [R. Diez]


* Verilog::Language 3.310 2011/07/22

**	Add --synthesis to vhier+Preproc to honor translate_offs. [Ozkan Dikmen]

**	Add SigParser covergroup and endgroup callbacks. [Jon Nall]

****	Fix covergroup callback giving empty datatype, bug361. [Jon Nall]

****	Fix SigParser port callback missing paren expressions. [Sean Vo]


* Verilog::Language 3.307 2011/06/22

****	Add vhier --xml. [David Asher]

****	Fix net used lint warnings after pin deletes, bug343. [David Chinnery]

****	When making, turn down GCC optimization to O1 to avoid GCC hang bug.


* Verilog::Language 3.306 2011/03/07

****	Fix block comment not separating identifiers, bug311. [Gene Sullivan]


* Verilog::Language 3.305 2010/12/03

***	Add -F option to read relative option files, bug297. [Neil Hamilton]

***	Fix env var expansion from Getopt, bug298.  [John Dickol]

****	Fix removing defines without ` when non-SystemC, bug300. [John Dickol]


* Verilog::Language 3.304 2010/10/25

****	Fix file_substitute expanding ~, msg382.  [Neil Hamilton]

****	Fix wrong filename on include file errors, bug289. [Brad Parker]


* Verilog::Language 3.303 2010/09/20

***	Add vrename --changelang option, to upgrade keywords. [Dan Moore]

***	Add vrename --language option. [Dan Moore]

***	Add Verilog::Language::language_maximum and language_keywords.
